@@ -1,3 +1,4 @@
+2411 [x264] fixed wrong number format of the zone modifier in same cases
 2410 [Settings] sort the default languages alphabetically
 2409 [Update] fixed grammar/spelling errors
 2408 [AviSynth] fixed DirectShowSource in non-portable mode (regression of 2406)
